<resources>
    <string name="app_name">Krítíkin</string>
    <string name="website_chip">Website</string>
    <string name="opening_hours_heading">Opening hours</string>
    <string name="reviews_heading">Reviews</string>
    <string name="questions_heading">Questions</string>
    <string name="admin_heading">Administration</string>
    <string name="no_reviews_text">No reviews have been written about this company.</string>
    <string name="no_questions_text">This company has not received any questions.</string>
    <string name="question_not_answered_text">This question has not been answered.</string>
    <string name="admin_access_description">If you are a representative of this company, you can apply for administrative access.</string>
    <string name="write_review_button">Write review</string>
    <string name="ask_question_button">Ask question</string>
    <string name="request_admin_access_button">Request admin access</string>
    <string name="search_field_hint">Search…</string>
    <string name="show_login_activity_button_text">Log in or sign up</string>
    <string name="login_button_text">Log in</string>
    <string name="logout_button_text">Log out %s</string>
    <string name="signup_button_text">Sign up</string>
    <string name="username_field_hint">Username</string>
    <string name="password_field_hint">Password</string>
    <string name="login_failed_text">Error: Login failed</string>
    <string name="signup_failed_text">Error: Signup failed</string>
    <string name="login_success_text">Welcome %s!</string>
    <string name="logged_out_text">Logged out %s</string>
    <string name="write_review_dialog_title">Write review</string>
    <string name="ask_question_dialog_title">Ask question</string>
    <string name="review_text_hint">Review text</string>
    <string name="question_text_hint">Question text</string>
    <string name="submit_button_text">Submit</string>
    <string name="cancel_button_text">Cancel</string>
    <string name="admin_access_submitted_text">Requested admin access for company %s</string>
</resources>
