<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".CompanyActivity">

    <ScrollView
        android:id="@+id/companyScrollView"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginStart="1dp"
            android:layout_marginEnd="1dp"
            android:gravity="center"
            android:orientation="vertical"
            android:paddingStart="16dp"
            android:paddingEnd="16dp">

            <TextView
                android:id="@+id/companyNameText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="48dp"
                android:gravity="center"
                android:text="Company Name"
                android:textAppearance="@style/TextAppearance.AppCompat.Display1" />

            <com.google.android.flexbox.FlexboxLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center"
                app:alignContent="stretch"
                app:alignItems="center"
                app:flexWrap="wrap"
                app:justifyContent="center">

                <com.google.android.material.chip.Chip
                    android:id="@+id/companyWebsiteChip"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="8dp"
                    android:text="@string/website_chip" />

                <com.google.android.material.chip.Chip
                    android:id="@+id/companyPhoneChip"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="8dp"
                    android:text="Phone" />

                <com.google.android.material.chip.Chip
                    android:id="@+id/companyAddressChip"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Address" />

            </com.google.android.flexbox.FlexboxLayout>

            <RatingBar
                android:id="@+id/companyRatingBar"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:isIndicator="true" />

            <TextView
                android:id="@+id/companyDescriptionText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="Company description"
                android:textAppearance="@style/TextAppearance.AppCompat.Body1" />

            <TextView
                android:id="@+id/textView2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:gravity="center"
                android:text="@string/opening_hours_heading"
                android:textAppearance="@style/TextAppearance.AppCompat.Medium" />

            <TextView
                android:id="@+id/companyOpeningHoursText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="Opening hours"
                android:textAppearance="@style/TextAppearance.AppCompat.Small" />

            <Space
                android:layout_width="match_parent"
                android:layout_height="38dp" />

            <TextView
                android:id="@+id/reviewsHeadingText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/reviews_heading"
                android:textAppearance="@style/TextAppearance.AppCompat.Large" />

            <HorizontalScrollView
                android:id="@+id/reviewsView"
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/reviewsRecycler"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:orientation="horizontal"
                    app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager" />
            </HorizontalScrollView>

            <TextView
                android:id="@+id/noReviewsText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/no_reviews_text" />

            <Button
                android:id="@+id/writeReviewButton"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/write_review_button" />

            <Space
                android:layout_width="match_parent"
                android:layout_height="38dp" />

            <TextView
                android:id="@+id/questionsHeadingText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/questions_heading"
                android:textAppearance="@style/TextAppearance.AppCompat.Large" />

            <HorizontalScrollView
                android:id="@+id/questionsView"
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/questionsRecycler"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:orientation="horizontal"
                    app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager" />
            </HorizontalScrollView>

            <TextView
                android:id="@+id/noQuestionsText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/no_questions_text" />

            <Button
                android:id="@+id/askQuestionButton"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/ask_question_button" />

            <Space
                android:layout_width="match_parent"
                android:layout_height="38dp" />

            <TextView
                android:id="@+id/adminHeadingText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/admin_heading"
                android:textAppearance="@style/TextAppearance.AppCompat.Large" />

            <TextView
                android:id="@+id/adminDescriptionText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/admin_access_description" />

            <Button
                android:id="@+id/requestAdminAccessButton"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="48dp"
                android:text="@string/request_admin_access_button" />

        </LinearLayout>
    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>